# SimpleRayTracing

./: .gitignore  BuildASSIMP.cmake  CMakeLists.txt  README.md  cloud1.xcf  cloud2.xcf  createTiming.sh  dragon.ply  plot.py  plotTiming.py  runtimes.csv  submit-mpi-omp.sh  submit-mpi.sh  submit-omp.sh  submit-pthread.sh  submit-ptrhead.sh  submit-serial-gnu.sh  submit-serial-intel.sh  submit-serial.sh
include/: Image.h  Image.inl  Light.h  Light.inl  Material.h  Material.inl  Ray.h  Ray.inl  Triangle.h  Triangle.inl  TriangleMesh.h  TriangleMesh.inl  Vec3.h  Vec3.inl
src/: Image.cxx  Ray.cxx  Triangle.cxx  TriangleMesh.cxx  main-omp.cxx  main-pthreads.cxx  main.cxx
